--- a/index.html
+++ b/index.html
@@ -278,22 +278,22 @@
 <!-- Canvas para partículas (fondo dinámico) -->
 <canvas id="particles-canvas"></canvas>
 
-<!-- Imágenes flotantes decorativas con URLs funcionales -->
+<!-- Imágenes flotantes decorativas (¡IMPORTANTE! Son las imágenes que deberás reemplazar) -->
 <div class="floating-images">
-    <img src="https://picsum.photos/id/101/200/200" alt="floating-1" class="floating-img floating-img-1">
-    <img src="https://picsum.photos/id/102/200/200" alt="floating-2" class="floating-img floating-img-2">
-    <img src="https://picsum.photos/id/103/200/200" alt="floating-3" class="floating-img floating-img-3">
-    <img src="https://picsum.photos/id/104/200/200" alt="floating-4" class="floating-img floating-img-4">
-    <img src="https://picsum.photos/id/106/200/200" alt="floating-5" class="floating-img floating-img-5">
-    <img src="https://picsum.photos/id/108/200/200" alt="floating-6" class="floating-img floating-img-6">
+    <img src="https://img.heresirc.com/Imagenes/paisaje1.jpg" alt="floating-1" class="floating-img floating-img-1">
+    <img src="https://img.heresirc.com/Imagenes/paisaje2.jpg" alt="floating-2" class="floating-img floating-img-2">
+    <img src="https://img.heresirc.com/Imagenes/paisaje3.jpg" alt="floating-3" class="floating-img floating-img-3">
+    <img src="https://img.heresirc.com/Imagenes/paisaje4.jpg" alt="floating-4" class="floating-img floating-img-4">
+    <img src="https://img.heresirc.com/Imagenes/paisaje5.jpg" alt="floating-5" class="floating-img floating-img-5">
+    <img src="https://img.heresirc.com/Imagenes/paisaje6.jpg" alt="floating-6" class="floating-img floating-img-6">
 </div>
 
 <!-- Contenido principal -->
 <div class="main-content">
     <div class="glass-card">
-        <!-- Foto de perfil con URL funcional (¡AHORA SÍ SE VE!) -->
+        <!-- Foto de perfil (reemplazar) -->
         <div class="profile-img-wrapper">
-            <img src="https://picsum.photos/id/100/300/300" alt="Heresirc profile" class="profile-img">
+            <img src="https://img.heresirc.com/Imagenes/perfil.jpg" alt="Heresirc profile" class="profile-img">
         </div>
 
         <h1 class="glitch">HERESIRC</h1>
