--- a/index.html
+++ b/index.html
@@ -4,25 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Heresirc · Página creativa</title>
+
     <!-- Fuentes modernas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+
     <!-- Font Awesome 6 (iconos) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
-        /* ✅ Ajuste rápido del recorte de tu foto (solo cambia este % si quieres) */
         :root{
             --profile-pos-x: 50%;
-            --profile-pos-y: 22%;   /* ⬅️ sube/baja el encuadre: 10% = más arriba, 40% = más abajo */
-            --profile-zoom: 1.12;   /* ⬅️ zoom suave para que se vea mejor en círculo */
+            --profile-pos-y: 22%;
+            --profile-zoom: 1.12;
         }
 
         body {
@@ -34,18 +31,15 @@
             position: relative;
         }
 
-        /* Canvas de partículas (fondo interactivo) */
         #particles-canvas {
             position: fixed;
-            top: 0;
-            left: 0;
+            top: 0; left: 0;
             width: 100%;
             height: 100%;
             z-index: 1;
             pointer-events: none;
         }
 
-        /* Contenedor principal (por encima del canvas) */
         .main-content {
             position: relative;
             z-index: 10;
@@ -59,7 +53,6 @@
             min-height: 100vh;
         }
 
-        /* Tarjeta principal con efecto glass */
         .glass-card {
             background: rgba(20, 30, 45, 0.4);
             backdrop-filter: blur(12px);
@@ -84,18 +77,21 @@
             100% { transform: translateY(-15px); }
         }
 
-        /* ✅ Contenedor de la imagen de perfil (MEJORADO) */
+        /* ✅ PERFIL (CORREGIDO) */
         .profile-img-wrapper {
-            width: 180px;              /* antes 160 */
-            height: 180px;             /* antes 160 */
+            width: 180px;
+            height: 180px;
             margin: 0 auto 2rem;
             border-radius: 50%;
-            padding: 6px;              /* un poquito más */
+            padding: 6px;
             background: linear-gradient(45deg, #ff6ec4, #7873f5, #3b9eff);
             background-size: 200% 200%;
             animation: rotate-gradient 6s linear infinite;
             box-shadow: 0 18px 38px -10px rgba(59, 158, 255, 0.8);
             position: relative;
+
+            /* clave: recorte perfecto aunque haya transform/zoom */
+            overflow: hidden;
         }
 
         @keyframes rotate-gradient {
@@ -104,21 +100,28 @@
             100% { background-position: 0% 50%; }
         }
 
-        /* ✅ Foto de perfil (MEJORADO para tu selfie vertical) */
         .profile-img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            /* clave: evitar comportamientos raros del inline-img */
+            display: block;
 
-            /* 🔥 Esto es lo clave para que tu foto se vea bien en círculo */
+            /* la imagen vive dentro y se recorta por el wrapper */
+            position: absolute;
+            inset: 6px;              /* coincide con el padding del wrapper */
+            width: calc(100% - 12px);
+            height: calc(100% - 12px);
+
+            object-fit: cover;
             object-position: var(--profile-pos-x) var(--profile-pos-y);
 
             border-radius: 50%;
             border: 4px solid #0f172a;
-            transform: scale(var(--profile-zoom)); /* zoom suave */
+
+            transform: scale(var(--profile-zoom));
             transition: transform 0.35s ease, filter 0.35s ease;
             filter: contrast(1.08) saturate(1.05) brightness(1.05);
             will-change: transform;
+            z-index: 2;
+            background: #0f172a;
         }
 
         .profile-img:hover {
@@ -126,7 +129,29 @@
             filter: contrast(1.12) saturate(1.08) brightness(1.08);
         }
 
-        /* Título con efecto glitch */
+        /* Fallback (si la imagen no carga) */
+        .profile-fallback {
+            position: absolute;
+            inset: 6px;
+            width: calc(100% - 12px);
+            height: calc(100% - 12px);
+            border-radius: 50%;
+            border: 4px solid #0f172a;
+            background: radial-gradient(circle at 30% 30%, rgba(144,223,255,.35), rgba(15,23,42,1));
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 1;
+            color: rgba(255,255,255,.85);
+            text-align: center;
+            padding: 12px;
+            font-weight: 700;
+            letter-spacing: 1px;
+        }
+
+        .profile-img-wrapper.is-fallback .profile-fallback { display: flex; }
+        .profile-img-wrapper.is-fallback .profile-img { display: none; }
+
         .glitch {
             font-size: 4rem;
             font-weight: 800;
@@ -157,7 +182,6 @@
             font-weight: 600;
         }
 
-        /* Redes sociales (botones animados) */
         .social-links {
             display: flex;
             flex-wrap: wrap;
@@ -195,25 +219,16 @@
             transition: left 0.5s;
         }
 
-        .social-link:hover::before {
-            left: 100%;
-        }
-
+        .social-link:hover::before { left: 100%; }
         .social-link:hover {
             transform: translateY(-8px) scale(1.1);
             background: rgba(255,255,255,0.2);
             box-shadow: 0 0 20px currentColor;
         }
 
-        .social-link i {
-            transition: transform 0.2s;
-        }
+        .social-link i { transition: transform 0.2s; }
+        .social-link:hover i { transform: scale(1.2); }
 
-        .social-link:hover i {
-            transform: scale(1.2);
-        }
-
-        /* Email */
         .email {
             text-align: center;
             font-size: 1.1rem;
@@ -233,11 +248,9 @@
             border-bottom-color: cyan;
         }
 
-        /* Imágenes flotantes decorativas */
         .floating-images {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 0; left: 0;
             width: 100%;
             height: 100%;
             z-index: 5;
@@ -263,7 +276,6 @@
             pointer-events: auto;
         }
 
-        /* Posiciones y animaciones individuales para cada imagen */
         .floating-img-1 { top: 8%; left: 5%; animation-duration: 14s; }
         .floating-img-2 { bottom: 12%; right: 3%; animation-duration: 19s; width: 110px; height: 110px; }
         .floating-img-3 { top: 20%; right: 8%; animation-duration: 16s; width: 70px; height: 70px; }
@@ -279,12 +291,11 @@
             100% { transform: translate(-30px, -30px) rotate(-5deg); }
         }
 
-        /* Responsive */
         @media (max-width: 700px) {
             .glitch { font-size: 3rem; }
             .glass-card { padding: 2rem 1.5rem; }
             .floating-img { width: 60px; height: 60px; }
-            .profile-img-wrapper { width: 160px; height: 160px; } /* mantiene bien en móvil */
+            .profile-img-wrapper { width: 160px; height: 160px; }
         }
 
         @media (max-width: 500px) {
@@ -294,10 +305,8 @@
 </head>
 <body>
 
-<!-- Canvas para partículas (fondo dinámico) -->
 <canvas id="particles-canvas"></canvas>
 
-<!-- Imágenes flotantes decorativas -->
 <div class="floating-images">
     <img src="https://img.heresirc.com/Imagenes/paisaje1.jpg" alt="floating-1" class="floating-img floating-img-1">
     <img src="https://img.heresirc.com/Imagenes/paisaje2.jpg" alt="floating-2" class="floating-img floating-img-2">
@@ -307,25 +316,31 @@
     <img src="https://img.heresirc.com/Imagenes/paisaje6.jpg" alt="floating-6" class="floating-img floating-img-6">
 </div>
 
-<!-- Contenido principal -->
 <div class="main-content">
     <div class="glass-card">
-        <!-- Foto de perfil -->
-        <div class="profile-img-wrapper">
+
+        <div class="profile-img-wrapper" id="profileWrap">
+            <!-- fallback visual -->
+            <div class="profile-fallback" aria-hidden="true">
+                HERESIRC
+            </div>
+
+            <!-- ✅ IMPORTANTE: referrerpolicy + onerror fallback -->
             <img
+                    id="profileImg"
                     src="https://img.heresirc.com/Imagenes/perfil.jpg"
                     alt="Heresirc profile"
                     class="profile-img"
                     loading="eager"
                     decoding="async"
+                    referrerpolicy="no-referrer"
+                    crossorigin="anonymous"
             >
         </div>
 
         <h1 class="glitch">HERESIRC</h1>
-
         <p class="bio">✨ Hola 👋 Soy Heresirc. Bienvenido a mi espacio creativo. ✨</p>
 
-        <!-- Redes sociales -->
         <div class="social-links">
             <a href="https://www.facebook.com/share/1897MroDnf/" target="_blank" class="social-link" style="color: #1877f2;"><i class="fab fa-facebook-f"></i></a>
             <a href="https://instagram.com/cris_tellezz" target="_blank" class="social-link" style="color: #e4405f;"><i class="fab fa-instagram"></i></a>
@@ -333,17 +348,33 @@
             <a href="#" target="_blank" class="social-link" style="color: #0077b5;"><i class="fab fa-linkedin-in"></i></a>
         </div>
 
-        <!-- Email de contacto -->
         <div class="email">
             📧 <a href="mailto:tuemail@correo.com">tuemail@correo.com</a>
         </div>
 
-        <p style="text-align: center; margin-top: 2rem; font-size: 0.9rem; opacity: 0.7;">✦ Página con mucho estilo y animaciones ✦</p>
+        <p style="text-align: center; margin-top: 2rem; font-size: 0.9rem; opacity: 0.7;">
+            ✦ Página con mucho estilo y animaciones ✦
+        </p>
     </div>
 </div>
 
-<!-- Script para las partículas del fondo -->
 <script>
+    // ✅ Fallback si la imagen de perfil NO carga (hotlink/403/ruta mal)
+    (function () {
+        const wrap = document.getElementById('profileWrap');
+        const img = document.getElementById('profileImg');
+
+        img.addEventListener('error', () => {
+            wrap.classList.add('is-fallback');
+        });
+
+        // Si llega a cargar, por si el navegador dispara cosas raras:
+        img.addEventListener('load', () => {
+            wrap.classList.remove('is-fallback');
+        });
+    })();
+
+    // Partículas
     (function() {
         const canvas = document.getElementById('particles-canvas');
         const ctx = canvas.getContext('2d');
@@ -382,7 +413,6 @@
                 ctx.fill();
             });
 
-            ctx.strokeStyle = 'rgba(100, 180, 255, 0.1)';
             ctx.lineWidth = 0.6;
             for (let i = 0; i < particles.length; i++) {
                 for (let j = i + 1; j < particles.length; j++) {
@@ -413,10 +443,7 @@
             requestAnimationFrame(drawParticles);
         }
 
-        window.addEventListener('resize', () => {
-            initParticles();
-        });
-
+        window.addEventListener('resize', initParticles);
         initParticles();
         drawParticles();
     })();
