--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
         :root {
             --profile-pos-x: 50%;
@@ -38,13 +34,14 @@
         /* canvas partículas (fondo) */
         #particles-canvas {
             position: fixed;
-            top: 0;
-            left: 0;
+            top: 0; left: 0;
             width: 100%;
             height: 100%;
             z-index: 0;
             pointer-events: none;
             opacity: 0.7;
+            /* performance */
+            will-change: transform;
         }
 
         /* estructura principal */
@@ -54,6 +51,7 @@
             max-width: 1300px;
             margin: 0 auto;
             padding: 2rem 1.8rem;
+            contain: layout style paint;
         }
 
         /* header con navegación flotante */
@@ -76,6 +74,8 @@
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
+            will-change: transform;
+            contain: paint;
         }
 
         .smart-nav a {
@@ -84,10 +84,11 @@
             font-weight: 600;
             padding: 0.6rem 1.2rem;
             border-radius: 40px;
-            transition: all 0.3s;
+            transition: transform 0.25s ease, box-shadow 0.25s ease, background 0.25s ease, border-color 0.25s ease;
             background: transparent;
             letter-spacing: 0.5px;
             border: 1px solid transparent;
+            will-change: transform;
         }
 
         .smart-nav a:hover {
@@ -108,6 +109,7 @@
             box-shadow: 0 40px 70px -20px #00000080, 0 0 0 1px rgba(120, 200, 255, 0.15) inset;
             transition: transform 0.4s cubic-bezier(0.2, 0.9, 0.3, 1), box-shadow 0.5s;
             margin-bottom: 4rem;
+            contain: content;
         }
 
         .hero-card:hover {
@@ -126,6 +128,8 @@
             box-shadow: 0 20px 40px -5px #3f9eff;
             overflow: hidden;
             position: relative;
+            will-change: transform;
+            contain: paint;
         }
 
         @keyframes rotateConic {
@@ -144,8 +148,9 @@
             border-radius: 50%;
             border: 4px solid #0e1a28;
             transform: scale(var(--profile-zoom));
-            transition: transform 0.4s, filter 0.4s;
+            transition: transform 0.35s ease, filter 0.35s ease;
             filter: contrast(1.1) saturate(1.1) brightness(1.03);
+            will-change: transform, filter;
         }
 
         .profile-img:hover {
@@ -162,6 +167,7 @@
             color: white;
             text-shadow: 0.05em 0 0 rgba(255, 50, 100, 0.7), -0.05em -0.025em 0 rgba(30, 210, 255, 0.7);
             animation: glitchSkew 3s infinite alternate;
+            will-change: transform;
         }
 
         @keyframes glitchSkew {
@@ -190,6 +196,7 @@
             gap: 1.5rem;
             justify-content: center;
             margin: 2.8rem 0 2rem;
+            contain: paint;
         }
 
         .social-ring {
@@ -205,10 +212,12 @@
             font-size: 2.2rem;
             color: white;
             text-decoration: none;
-            transition: 0.3s;
+            transition: transform 0.25s ease, box-shadow 0.25s ease, border-color 0.25s ease;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
             position: relative;
             overflow: hidden;
+            will-change: transform;
+            contain: paint;
         }
 
         .social-ring::after {
@@ -219,6 +228,7 @@
             background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.5), transparent 70%);
             opacity: 0;
             transition: opacity 0.2s;
+            pointer-events: none;
         }
 
         .social-ring:hover {
@@ -226,7 +236,6 @@
             border-color: cyan;
             box-shadow: 0 0 35px cyan;
         }
-
         .social-ring:hover::after { opacity: 0.4; }
 
         /* email */
@@ -240,6 +249,7 @@
             margin: 2.5rem auto 0;
             border: 1px solid rgba(0, 200, 255, 0.3);
             backdrop-filter: blur(5px);
+            contain: paint;
         }
 
         .email-bubble a {
@@ -254,6 +264,7 @@
             grid-template-columns: repeat(3, 1fr);
             gap: 1.8rem;
             margin: 5rem 0 3rem;
+            contain: layout style paint;
         }
 
         .about-card {
@@ -262,11 +273,13 @@
             border-radius: 2.5rem;
             padding: 2rem 1.8rem;
             border: 1px solid rgba(90, 180, 255, 0.2);
-            transition: all 0.3s ease;
+            transition: transform 0.25s ease, box-shadow 0.25s ease, border-color 0.25s ease;
             box-shadow: 0 25px 40px -15px #000;
             position: relative;
             overflow: hidden;
             z-index: 2;
+            will-change: transform;
+            contain: content;
         }
 
         .about-card:hover {
@@ -284,7 +297,9 @@
             background-position: center 30%;
             opacity: 0.15;
             z-index: -1;
-            transition: opacity 0.5s, transform 0.6s;
+            transition: opacity 0.35s ease, transform 0.45s ease;
+            transform: translateZ(0);
+            will-change: transform, opacity;
         }
 
         .about-card:hover::before {
@@ -328,8 +343,12 @@
             padding: 0.8rem 1.2rem;
             border-radius: 50px;
             border-left: 4px solid cyan;
-            transition: 0.2s;
+            transition: transform 0.18s ease, background 0.18s ease;
+            will-change: transform;
+            contain: paint;
         }
+
+        .valor-item:hover { transform: translateY(-2px); }
 
         .valor-item i {
             color: cyan;
@@ -343,6 +362,7 @@
             width: 100%;
             height: 150px;
             margin: 2rem 0;
+            contain: paint;
         }
 
         .mini-float {
@@ -355,6 +375,8 @@
             box-shadow: 0 25px 40px -10px black;
             animation: slowDrift 12s infinite alternate ease-in-out;
             opacity: 0.7;
+            will-change: transform;
+            transform: translateZ(0);
         }
 
         .mini-float:nth-child(1) { left: 0; top: 0; animation-delay: 0s; }
@@ -374,6 +396,7 @@
             color: #8a9bb5;
             border-top: 1px solid rgba(255,255,255,0.05);
             margin-top: 5rem;
+            contain: paint;
         }
 
         /* responsividad */
@@ -382,10 +405,16 @@
             .glitch-big { font-size: 3.2rem; }
             .smart-nav { gap: 0.8rem; padding: 0.8rem 1.2rem; }
         }
+
+        /* Respeta Reduce Motion (no cambia tu diseño por defecto; solo para usuarios que lo pidan) */
+        @media (prefers-reduced-motion: reduce) {
+            .avatar-cosmic, .glitch-big, .mini-float { animation: none !important; }
+            .smart-nav a, .social-ring, .about-card, .profile-img { transition: none !important; }
+        }
     </style>
 </head>
-<body>
 
+<body>
 <canvas id="particles-canvas"></canvas>
 
 <div class="site-wrapper">
@@ -447,40 +476,39 @@
         </div>
     </div>
 
-    <!-- VALORES (con paisajes integrados, manteniendo el número 4,5,6 de fondo) -->
+    <!-- VALORES -->
     <div id="valores" style="background: rgba(0, 10, 25, 0.4); backdrop-filter: blur(10px); border-radius: 4rem; padding: 3rem 2.5rem; margin: 2rem 0 3rem; border: 1px solid rgba(0,255,255,0.15);">
         <h2 style="font-size: 3rem; font-weight: 800; margin-bottom: 2rem; display: flex; gap: 15px; align-items: center; color: #fff; text-shadow: 0 0 10px cyan;">
             <i class="fas fa-gem" style="color: cyan;"></i> VALORES HERESIRC <i class="fas fa-gem" style="color: cyan;"></i>
         </h2>
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap: 1.5rem;">
 
-            <!-- valor 1 (paisaje4) -->
             <div class="valor-item" style="border-left-color: #ff9f6e;">
                 <i class="fas fa-leaf"></i>
                 <span><strong>PAISAJE 4 · serenidad</strong> — la quietud de un valle nos enseña a escuchar.</span>
             </div>
-            <!-- valor 2 (paisaje5) -->
+
             <div class="valor-item" style="border-left-color: #c0a0ff;">
                 <i class="fas fa-fire"></i>
                 <span><strong>PAISAJE 5 · transformación</strong> — la roca se vuelve luz al atardecer.</span>
             </div>
-            <!-- valor 3 (paisaje6) -->
+
             <div class="valor-item" style="border-left-color: #72f0d0;">
                 <i class="fas fa-water"></i>
                 <span><strong>PAISAJE 6 · inmensidad</strong> — como el archipiélago, abrazamos diversidad.</span>
             </div>
-            <!-- valores adicionales -->
+
             <div class="valor-item"><i class="fas fa-hand-peace"></i> <span>integridad radical</span></div>
             <div class="valor-item"><i class="fas fa-infinity"></i> <span>curiosidad infinita</span></div>
             <div class="valor-item"><i class="fas fa-hand-holding-heart"></i> <span>comunidad</span></div>
         </div>
     </div>
 
-    <!-- paisajes flotantes pequeños (repes) para mantener el espíritu visual -->
+    <!-- paisajes flotantes -->
     <div class="floating-deco">
-        <img src="https://img.heresirc.com/Imagenes/paisaje4.jpg" alt="" class="mini-float" loading="lazy">
-        <img src="https://img.heresirc.com/Imagenes/paisaje5.jpg" alt="" class="mini-float" loading="lazy">
-        <img src="https://img.heresirc.com/Imagenes/paisaje6.jpg" alt="" class="mini-float" loading="lazy">
+        <img src="https://img.heresirc.com/Imagenes/paisaje4.jpg" alt="" class="mini-float" loading="lazy" decoding="async">
+        <img src="https://img.heresirc.com/Imagenes/paisaje5.jpg" alt="" class="mini-float" loading="lazy" decoding="async">
+        <img src="https://img.heresirc.com/Imagenes/paisaje6.jpg" alt="" class="mini-float" loading="lazy" decoding="async">
     </div>
 
     <div class="footer-bless">
@@ -489,94 +517,185 @@
     </div>
 </div>
 
-<!-- script de partículas (mejorado) -->
+<!-- script de partículas (OPTIMIZADO, misma estética) -->
 <script>
-    (function() {
+    (function () {
         const canvas = document.getElementById('particles-canvas');
-        const ctx = canvas.getContext('2d');
-        let w, h;
+        const ctx = canvas.getContext('2d', { alpha: true });
+
+        let w = 0, h = 0, dpr = 1;
         let particles = [];
 
-        function init() {
+        // Config
+        const MAX_DPR = 1.75;          // evita costos absurdos en pantallas 3x
+        const CELL_SIZE = 120;         // tamaño de celda para grid (≈ distancia de conexión)
+        const LINK_DIST = 110;         // distancia máxima de línea (tu valor original)
+        const LINK_DIST2 = LINK_DIST * LINK_DIST;
+
+        let rafId = 0;
+        let running = true;
+
+        function clamp(v, min, max) { return v < min ? min : (v > max ? max : v); }
+
+        function resize() {
             w = window.innerWidth;
             h = window.innerHeight;
-            canvas.width = w;
-            canvas.height = h;
 
-            const pCount = Math.floor((w * h) / 7500) + 30;
-            particles = [];
-            for (let i = 0; i < pCount; i++) {
-                particles.push({
-                    x: Math.random() * w,
-                    y: Math.random() * h,
-                    vx: (Math.random() - 0.5) * 0.2,
-                    vy: (Math.random() - 0.5) * 0.2,
-                    size: Math.random() * 3 + 1,
-                    color: `rgba(100, 200, 250, ${Math.random() * 0.4 + 0.2})`
-                });
-            }
+            dpr = Math.min(window.devicePixelRatio || 1, MAX_DPR);
+
+            canvas.width = Math.floor(w * dpr);
+            canvas.height = Math.floor(h * dpr);
+            canvas.style.width = w + 'px';
+            canvas.style.height = h + 'px';
+
+            // Escala el contexto para trabajar en coordenadas CSS (más simple)
+            ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
+
+            // Recalcular cantidad de partículas de forma parecida a la original, pero controlada
+            const target = Math.floor((w * h) / 7500) + 30;
+            const pCount = clamp(target, 40, 140); // límite para evitar caídas en pantallas enormes
+
+            particles = new Array(pCount).fill(0).map(() => ({
+                x: Math.random() * w,
+                y: Math.random() * h,
+                vx: (Math.random() - 0.5) * 0.2,
+                vy: (Math.random() - 0.5) * 0.2,
+                size: Math.random() * 3 + 1,
+                a: Math.random() * 0.4 + 0.2 // alpha (guardado para no crear strings)
+            }));
         }
 
-        function draw() {
-            ctx.clearRect(0, 0, w, h);
-            ctx.fillStyle = '#0c0e19';
-            ctx.fillRect(0, 0, w, h);
+        // Debounce de resize (evita que dispare 50 veces)
+        let resizeT = 0;
+        function onResize() {
+            window.clearTimeout(resizeT);
+            resizeT = window.setTimeout(resize, 120);
+        }
 
-            particles.forEach(p => {
-                ctx.beginPath();
-                ctx.arc(p.x, p.y, p.size, 0, 2 * Math.PI);
-                ctx.fillStyle = p.color;
-                ctx.fill();
-            });
+        // Grid (spatial hashing) para evitar O(n^2)
+        function buildGrid() {
+            const grid = new Map();
+            const inv = 1 / CELL_SIZE;
 
-            // líneas entre partículas
-            ctx.lineWidth = 0.5;
             for (let i = 0; i < particles.length; i++) {
-                for (let j = i + 1; j < particles.length; j++) {
-                    const dx = particles[i].x - particles[j].x;
-                    const dy = particles[i].y - particles[j].y;
-                    const dist = Math.sqrt(dx*dx + dy*dy);
-                    if (dist < 110) {
-                        ctx.beginPath();
-                        ctx.moveTo(particles[i].x, particles[i].y);
-                        ctx.lineTo(particles[j].x, particles[j].y);
-                        ctx.strokeStyle = `rgba(130, 200, 255, ${0.12 * (1 - dist/110)})`;
-                        ctx.stroke();
+                const p = particles[i];
+                const cx = (p.x * inv) | 0;
+                const cy = (p.y * inv) | 0;
+                const key = (cx << 16) ^ cy;
+                let arr = grid.get(key);
+                if (!arr) { arr = []; grid.set(key, arr); }
+                arr.push(i);
+            }
+            return grid;
+        }
+
+        function drawFrame() {
+            if (!running) return;
+
+            ctx.clearRect(0, 0, w, h);
+
+            // 1) dibuja partículas
+            for (let i = 0; i < particles.length; i++) {
+                const p = particles[i];
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+                ctx.fillStyle = `rgba(100, 200, 250, ${p.a})`;
+                ctx.fill();
+            }
+
+            // 2) líneas usando grid (solo vecinas)
+            const grid = buildGrid();
+            ctx.lineWidth = 0.5;
+
+            const inv = 1 / CELL_SIZE;
+            for (let i = 0; i < particles.length; i++) {
+                const p = particles[i];
+                const cx = (p.x * inv) | 0;
+                const cy = (p.y * inv) | 0;
+
+                // revisa celdas vecinas (3x3)
+                for (let oy = -1; oy <= 1; oy++) {
+                    for (let ox = -1; ox <= 1; ox++) {
+                        const nx = cx + ox, ny = cy + oy;
+                        const key = (nx << 16) ^ ny;
+                        const bucket = grid.get(key);
+                        if (!bucket) continue;
+
+                        for (let b = 0; b < bucket.length; b++) {
+                            const j = bucket[b];
+                            if (j <= i) continue; // evita duplicados
+
+                            const q = particles[j];
+                            const dx = p.x - q.x;
+                            const dy = p.y - q.y;
+                            const d2 = dx * dx + dy * dy;
+
+                            if (d2 < LINK_DIST2) {
+                                const dist = Math.sqrt(d2);
+                                const alpha = 0.12 * (1 - dist / LINK_DIST);
+                                ctx.beginPath();
+                                ctx.moveTo(p.x, p.y);
+                                ctx.lineTo(q.x, q.y);
+                                ctx.strokeStyle = `rgba(130, 200, 255, ${alpha})`;
+                                ctx.stroke();
+                            }
+                        }
                     }
                 }
             }
 
-            particles.forEach(p => {
+            // 3) actualizar partículas
+            for (let i = 0; i < particles.length; i++) {
+                const p = particles[i];
                 p.x += p.vx;
                 p.y += p.vy;
+
                 if (p.x < 0 || p.x > w) p.vx *= -0.99;
                 if (p.y < 0 || p.y > h) p.vy *= -0.99;
-                p.x = Math.min(w, Math.max(0, p.x));
-                p.y = Math.min(h, Math.max(0, p.y));
-            });
 
-            requestAnimationFrame(draw);
+                p.x = p.x < 0 ? 0 : (p.x > w ? w : p.x);
+                p.y = p.y < 0 ? 0 : (p.y > h ? h : p.y);
+            }
+
+            rafId = requestAnimationFrame(drawFrame);
         }
 
-        window.addEventListener('resize', init);
-        init();
-        draw();
+        // Pausa si la pestaña no está visible (gran mejora real)
+        function onVisibilityChange() {
+            if (document.hidden) {
+                running = false;
+                if (rafId) cancelAnimationFrame(rafId);
+                rafId = 0;
+            } else {
+                if (!running) {
+                    running = true;
+                    rafId = requestAnimationFrame(drawFrame);
+                }
+            }
+        }
+
+        window.addEventListener('resize', onResize, { passive: true });
+        document.addEventListener('visibilitychange', onVisibilityChange);
+
+        resize();
+        rafId = requestAnimationFrame(drawFrame);
     })();
 
     // manejo de fallback perfil (si no carga)
     const profileImg = document.getElementById('profileImg');
     if (profileImg) {
-        profileImg.addEventListener('error', function() {
+        profileImg.addEventListener('error', function () {
             const parent = this.closest('.avatar-cosmic');
             if (parent) {
                 parent.style.background = '#102030';
-                parent.insertAdjacentHTML('beforeend', '<div style="position:absolute; inset:10px; background:radial-gradient(circle at 30% 30%, #1e3b5a, #0f1a2f); border-radius:50%; display:flex; align-items:center; justify-content:center; color:white; font-weight:800;">HERESIRC</div>');
+                parent.insertAdjacentHTML(
+                    'beforeend',
+                    '<div style="position:absolute; inset:10px; background:radial-gradient(circle at 30% 30%, #1e3b5a, #0f1a2f); border-radius:50%; display:flex; align-items:center; justify-content:center; color:white; font-weight:800;">HERESIRC</div>'
+                );
                 this.style.display = 'none';
             }
-        });
+        }, { passive: true });
     }
 </script>
-
-<!-- pequeño script para efecto de smooth hover en los valores (extra) -->
 </body>
 </html>
